--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Frontend Mentor | Huddle landing page with curved sections</title>
   </head>
   <body>
@@ -104,11 +106,19 @@
               <p>Phone: +1-543-123-4567</p>
             </div>
             <div class="social">
-              <img src="./images/" alt="">
+             <a href="#"><i class="fa fa-facebook-official" style="font-size:36px; color: white;"></i></a>
+             <a href="#"><i class="fa fa-instagram" style="font-size:36px; color:white"></i></a>
+             <a href="#"><i class="fa fa-twitter-square" style="font-size:36px; color: white;"></i></a>
             </div>
         </div>
         <!-- --------footer sec 2---------- -->
-        <div class="footer-right"></div>
+        <div class="footer-right">
+          <h3> Newsletter</h3>
+          <p>To recieve tips on how to grow your community, sign up to our weekly newsletter. We’ll never 
+            send you spam or pass on your email address</p>
+          <input type="text">
+          <button type="submit">submit</button>
+          </div>
       </div>
     </footer>
   </body>
