complete landing page in desktop view

--- a/index.html
+++ b/index.html
@@ -144,13 +144,15 @@
         </div>
         <!-- --------footer sec 2---------- -->
         <div class="footer-right">
-          <h3>Newsletter</h3>
+          <h3>NEWSLETTER</h3>
           <p>
             To recieve tips on how to grow your community, sign up to our weekly
             newsletter. We’ll never send you spam or pass on your email address
           </p>
-          <input type="text" />
-          <button type="submit">submit</button>
+          <form action="">
+            <input type="text" />
+            <div class="submit">submit</div>
+          </form>
         </div>
       </div>
     </footer>
