--- a/index.html
+++ b/index.html
@@ -122,24 +122,9 @@
             <p>Phone: +1-543-123-4567</p>
           </div>
           <div class="social">
-            <a href="#"
-              ><i
-                class="fa fa-facebook-official"
-                style="font-size: 36px; color: white"
-              ></i
-            ></a>
-            <a href="#"
-              ><i
-                class="fa fa-instagram"
-                style="font-size: 36px; color: white"
-              ></i
-            ></a>
-            <a href="#"
-              ><i
-                class="fa fa-twitter-square"
-                style="font-size: 36px; color: white"
-              ></i
-            ></a>
+            <a href="#"><i class="fa fa-facebook-official , media-icons"></i></a>
+            <a href="#"><i class="fa fa-instagram , media-icons"></i></a>
+            <a href="#"><i class="fa fa-twitter-square , media-icons"></i></a>
           </div>
         </div>
         <!-- --------footer sec 2---------- -->
