add pattern pic to html file

--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
           </div>
         </div>
         <!-- --------- -->
+        <img src="./images/bg-section-top-desktop-1.svg" alt="bg-section-top-desktop-1" class="pattern-top-desktop">
+        <img src="./images/bg-section-top-mobile-1.svg" alt="bg-section-top-mobile-1" class="pattern-top-mobile">
+        <!-- ------ -->
         <div class="sec1">
           <div class="sec1-text sec-text">
             <h3>Grow Together</h3>
@@ -67,6 +70,9 @@
           </div>
           <img src="./images/illustration-grow-together.svg" alt="" />
         </div>
+        <!-- -------------- -->
+        <img src="./images/bg-section-bottom-desktop-1.svg" alt="bg-section-bottom-desktop-1" class="pattern-bottom-desktop">
+        <img src="./images/bg-section-bottom-mobile-1.svg" alt="bg-section-bottom-mobile-1" class="pattern-bottom-mobile">
         <!-- -------------- -->
         <div class="sec2">
           <img
@@ -84,6 +90,8 @@
           </div>
         </div>
         <!-- ---------------- -->
+        <img src="./images/bg-section-top-desktop-2.svg" alt="bg-section-top-desktop-2" class="pattern-top-desktop">
+        <img src="./images/bg-section-top-mobile-2.svg" alt="bg-section-top-mobile-2" class="pattern-top-mobile">
         <div class="sec3">
           <div class="sec3-text sec-text">
             <h3>Your Users</h3>
@@ -95,6 +103,8 @@
           </div>
           <img src="./images/illustration-your-users.svg" alt="" />
         </div>
+         <img src="./images/bg-section-top-desktop-2.svg" alt="bg-section-top-desktop-2" class="pattern-top-desktop">
+        <img src="./images/bg-section-top-mobile-2.svg" alt="bg-section-top-mobile-2" class="pattern-top-mobile">
         <!-- -------------------------- -->
         <div class="lastSec">
           <h3>Ready To Build Your Community?</h3>
