add responsive for tablet and other screen preferly have biggar width than 400px

--- a/index.html
+++ b/index.html
@@ -127,7 +127,8 @@
     </main>
     <!-- ---------------------footer------------------------- -->
     <footer>
-      <img src="./images/bg-footer-top-desktop.svg" alt="" />
+      <img src="./images/bg-footer-top-desktop.svg" alt="bg-footer-top-desktop" class="pattern-top-desktop" style="margin-bottom: -2px;">
+      <img src="./images/bg-footer-top-mobile.svg" alt="bg-footer-top-mobile" class="pattern-top-mobile" style="margin-bottom: -2px;">
       <div class="footer-sec">
         <!-- ---------------footer sec 1 -->
         <div class="footer-left">
